--- a/config/logstash.conf
+++ b/config/logstash.conf
@@ -46,8 +46,7 @@ filter {
 
 output { 
   elasticsearch {
-    host => elasticsearch
-    protocol => http
+    hosts => elasticsearch
   }
   stdout { codec => rubydebug }
 }
